[gd_scene load_steps=8 format=3 uid="uid://dttdy4fpxll0j"]

[ext_resource type="Script" uid="uid://cv5608lqogyid" path="res://Scripts/godot_vehicle.gd" id="1_lvvc6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xdlnn"]
albedo_color = Color(0.49803922, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_rpg24"]
material = SubResource("StandardMaterial3D_xdlnn")
size = Vector3(4.3, 1, 1.8)

[sub_resource type="BoxShape3D" id="BoxShape3D_g5ejs"]
size = Vector3(4.3, 1, 1.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vpo0q"]
albedo_color = Color(0.18717614, 0.18717614, 0.18717614, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lvvc6"]
normal_enabled = true

[sub_resource type="CylinderMesh" id="CylinderMesh_g5ejs"]
material = SubResource("StandardMaterial3D_lvvc6")
height = 0.2

[node name="Vehicle" type="VehicleBody3D"]
script = ExtResource("1_lvvc6")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_rpg24")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_g5ejs")

[node name="WheelBL" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 1.5, -0.32018065, 1)
use_as_traction = true
wheel_rest_length = 0.25
wheel_friction_slip = 1.0
suspension_travel = 0.15
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="WheelMesh" type="MeshInstance3D" parent="WheelBL"]
transform = Transform3D(7.54979e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, -7.54979e-08, -3.300118e-15, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_vpo0q")
mesh = SubResource("CylinderMesh_g5ejs")

[node name="WheelFR" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -1.5, -0.32018065, -1)
use_as_traction = true
use_as_steering = true
wheel_rest_length = 0.25
wheel_friction_slip = 1.0
suspension_travel = 0.15
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="WheelMesh" type="MeshInstance3D" parent="WheelFR"]
transform = Transform3D(7.54979e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, -7.54979e-08, -3.300118e-15, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_vpo0q")
mesh = SubResource("CylinderMesh_g5ejs")
skeleton = NodePath("../../WheelBL")

[node name="WheelFL" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -1.5, -0.32018065, 1)
use_as_traction = true
use_as_steering = true
wheel_rest_length = 0.25
wheel_friction_slip = 1.0
suspension_travel = 0.15
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="WheelMesh" type="MeshInstance3D" parent="WheelFL"]
transform = Transform3D(7.54979e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, -7.54979e-08, -3.300118e-15, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_vpo0q")
mesh = SubResource("CylinderMesh_g5ejs")
skeleton = NodePath("../../WheelBL")

[node name="WheelBR" type="VehicleWheel3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 1.5, -0.32018065, -1)
use_as_traction = true
wheel_rest_length = 0.25
wheel_friction_slip = 1.0
suspension_travel = 0.15
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="WheelMesh" type="MeshInstance3D" parent="WheelBR"]
transform = Transform3D(7.54979e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, -7.54979e-08, -3.300118e-15, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_vpo0q")
mesh = SubResource("CylinderMesh_g5ejs")
skeleton = NodePath("../../WheelBL")
